# wordle-gear-game

wordle-gear-academy-main/: Cargo.toml  README.md
wordle-gear-academy-main/session-proxy/: Cargo.toml  build.rs
wordle-gear-academy-main/session-proxy/io/: Cargo.toml
wordle-gear-academy-main/session-proxy/io/src/: lib.rs
wordle-gear-academy-main/session-proxy/src/: lib.rs
wordle-gear-academy-main/session-proxy/tests/: basic.rs
wordle-gear-academy-main/wordle-game/: Cargo.toml
wordle-gear-academy-main/wordle-game/src/: lib.rs
