[package]
name = "session-proxy"
homepage.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
session-proxy-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
session-proxy-io.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gmeta.workspace = true
gtest.workspace = true
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
session-proxy-io.workspace = true
